# aura-audit

./: .env.example  .gitignore  README.md  pyproject.toml
aura-audit/: cli.py
aura-audit/engine/: context.py  heuristics.py
aura-audit/inference/: __init__.py
aura-audit/output/: formatter.py
aura-audit/providers/: base.py
aura-audit/providers/aws/: models.py  provider.py
aura-audit/schemas/: __init__.py
aura_audit/: __init__.py  cli.py
aura_audit/engine/: __init__.py  context.py  heuristics.py  semantic_auditor.py
aura_audit/inference/: bridge.py
aura_audit/output/: __init__.py
aura_audit/providers/: __init__.py
aura_audit/providers/aws/: __init__.py  ingestion.py  provider.py
aura_audit/schemas/: audit_request.py  finding.py
tests/: test_bridge.py  test_context.py  test_heuristics.py
tests/fixtures/: sample_policies.json
