[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aura-audit"
version = "0.1.0"
description = "Semantic IAM policy auditor using local SLM inference via Ollama"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "click>=8.1.7",
    "aiohttp>=3.9.0",
    "pydantic>=2.6.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "moto[iam,cloudtrail]>=5.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.scripts]
aura-audit = "aura_audit.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true